--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
+    "express": "^4.18.2",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.1.3"
